Changes for 2.4.2rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Greek, Italian, Japanese, Polish, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)

Bug fixes:
.D........ [ZBX-6542] updated description of HousekeepingFrequency parameter in the default server and proxy configuration files (Sasha)
.......PS. [ZBX-8833] fixed dynamic SNMP item cache working incorrectly for hosts with multiple SNMP interfaces, optimized cache performance (asaveljevs)
A.F....... [ZBX-8904] fixed item.get API to not read all host interfaces when option "selectInterfaces" is used (Krists)
.......PS. [ZBX-8538] added Net-SNMP retry of 1 for cases where Zabbix will not be retrying itself (asaveljevs)
.......PS. [ZBX-8538] changed the strategy to decrease the optimal number of variables two times only (asaveljevs)
..F....... [ZBX-8232] fixed performance issues in maps (Ivo)
........S. [ZBX-8948] fixed memory leak when checking Template condition during action processing (wiper)
........S. [ZBX-6353] improved history cache performance when it's flooded with data from less than 1000 items (wiper)
.......PS. [ZBX-8916] fixed "lastlogsize" not being updated in the configuration cache when values are received from the agent (asaveljevs, Sasha)
..F....... [ZBX-8877] fixed filters not hiding/showing for IE11 (Krists)
...G...PS. [ZBX-8794] fixed parsing of runtime control options and related error messages (igors)
....I..... [ZBX-8885] fixed building of Zabbix daemons with IBM DB2 support on systems with newer gcc compilers (Sasha, wiper)
..F....... [ZBX-8791] fixed importing sysmaps when host elements are linked and have a trigger assigned to the link (Krists)
....I..... [ZBX-8072] fixed bug when long messages were not truncated to 2KB when inserting into alerts table on DB2 databases (wiper)